AUTOMAKE_OPTIONS = 1.7

SUBDIRS = font graphics theme

EFENCE = 

add_ons_la = font/libetk-add-ons-font.la graphics/libetk-add-ons-graphics.la theme/libetk-add-ons-theme.la

noinst_LTLIBRARIES = libetk-add-ons.la

libetk_add_ons_la_SOURCES =

libetk_add_ons_la_LIBADD = $(add_ons_la)
libetk_add_ons_la_DEPENDENCIES = $(add_ons_la)

DISTCLEANFILES = Makefile.in

